# ohtupalautus

./: .gitignore  README.md
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/git-branch-harjoitus/: LICENSE  README.md  index.py
viikko2/nhl-reader/src/: index.py  player.py  reader.py  stats.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/src/tests/: increase_counter.robot
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: pyproject.toml
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: index.py  int_joukko.py
viikko5/int-joukko/src/tests/: int_joukko_test.py
viikko5/laskin/src/: kayttoliittyma.py  komento.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query.py
viikko7/: referaatti.md
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_tekoaly.py  pelitehdas.py
