[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["ladtopi <ladtopi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
jsonpickle = "^3.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
